shodrone.dsl_Plugin/src/main/java/figure_dsl/generated/dslParser.java
package figure_dsl.generated;// Generated from dsl.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

// Suppress common warnings for generated code, including unused variables, unchecked casts, and others.
@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})

// Parser class generated by ANTLR from the DSL grammar.
// This class defines all parsing logic for the DSL language constructs.
public class dslParser extends Parser {

	// Verifies ANTLR runtime compatibility.
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	// Decision DFAs for each parser rule, used for optimized prediction during parsing.
	protected static final DFA[] _decisionToDFA;

	// Shared context cache to improve performance by reusing parsing contexts.
	protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();

	// Token type constants — each corresponds to a terminal symbol in the grammar.
	public static final int
			T__0=1,   // 'DSL'
			T__1=2,   // 'version'
			T__2=3,   // ';'
			T__3=4,   // 'DroneType'
			T__4=5,   // 'Position'
			T__5=6,   // '='
			T__6=7,   // 'Velocity'
			T__7=8,   // 'Distance'
			T__8=9,   // '('
			T__9=10,  // ','
			T__10=11, // ')'
			T__11=12, // 'before'
			T__12=13, // 'after'
			T__13=14, // 'group'
			T__14=15, // 'endbefore'
			T__15=16, // 'endafter'
			T__16=17, // 'endgroup'
			T__17=18, // '.'
			T__18=19, // 'move'
			T__19=20, // 'rotate'
			T__20=21, // 'lightsOn'
			T__21=22, // 'lightsOff()'
			T__22=23, // 'pause'
			T__23=24, // '*'
			T__24=25, // '/'
			T__25=26, // '+'
			T__26=27, // '-'
			VERSION_NUMBER=28, // Version literal (e.g., 1.0)
			ID=29,             // Identifier (e.g., variable name)
			NUMBER=30,         // Numeric literal
			WS=31;             // Whitespace (ignored by parser)

	// Rule index constants — correspond to grammar rules and used internally by the parser.
	public static final int
			RULE_dsl = 0,
			RULE_version = 1,
			RULE_drone_model = 2,
			RULE_variable_declaration = 3,
			RULE_position_declaration = 4,
			RULE_velocity_declaration = 5,
			RULE_distance_declaration = 6,
			RULE_vector = 7,
			RULE_element_definition = 8,
			RULE_parameter_list = 9,
			RULE_parameter = 10,
			RULE_block_statement = 11,
			RULE_unscoped_statement = 12,
			RULE_block_type = 13,
			RULE_end_block_type = 14,
			RULE_statement = 15,
			RULE_group_statement_block = 16,
			RULE_method = 17,
			RULE_rotate_param = 18,
			RULE_pause_statement = 19,
			RULE_expression = 20;

	// Returns an array of human-readable rule names for debugging or IDE tooling.
	private static String[] makeRuleNames() {
		return new String[] {
				"dsl", "version", "drone_model", "variable_declaration", "position_declaration",
				"velocity_declaration", "distance_declaration", "vector", "element_definition",
				"parameter_list", "parameter", "block_statement", "unscoped_statement",
				"block_type", "end_block_type", "statement", "group_statement_block",
				"method", "rotate_param", "pause_statement", "expression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	// Returns literal token values as defined in the grammar (e.g., "DSL", "version", etc.).
	private static String[] makeLiteralNames() {
		return new String[] {
				null, "'DSL'", "'version'", "';'", "'DroneType'", "'Position'", "'='",
				"'Velocity'", "'Distance'", "'('", "','", "')'", "'before'", "'after'",
				"'group'", "'endbefore'", "'endafter'", "'endgroup'", "'.'", "'move'",
				"'rotate'", "'lightsOn'", "'lightsOff()'", "'pause'", "'*'", "'/'", "'+'",
				"'-'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();

	// Returns symbolic token names (for named tokens like VERSION_NUMBER, ID, etc.).
	private static String[] makeSymbolicNames() {
		return new String[] {
				null, null, null, null, null, null, null, null, null, null, null, null,
				null, null, null, null, null, null, null, null, null, null, null, null,
				null, null, null, null, "VERSION_NUMBER", "ID", "NUMBER", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();

	// Vocabulary object provides access to both literal and symbolic token names.
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * Legacy token name array — replaced by VOCABULARY but retained for backward compatibility.
	 */
	@Deprecated
	public static final String[] tokenNames;

	// Static initializer populates deprecated tokenNames array.
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			// Prefer literal name if available
			tokenNames[i] = VOCABULARY.getLiteralName(i);

			// Fallback to symbolic name if literal is not defined
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			// If neither name is defined, mark as invalid
			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}
	// Returns the deprecated token name array. Prefer using getVocabulary() instead.
	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	// Returns the Vocabulary object for this parser, containing token metadata.
	@Override
	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	// Returns the name of the grammar file used to generate this parser.
	@Override
	public String getGrammarFileName() {
		return "dsl.g4";
	}

	// Returns an array of rule names defined in the grammar.
	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}

	// Returns the serialized ATN (Abstract Syntax Tree) used by the parser for prediction.
	@Override
	public String getSerializedATN() {
		return _serializedATN;
	}

	// Returns the ATN (Abstract Syntax Tree) representation of the grammar.
	@Override
	public ATN getATN() {
		return _ATN;
	}

	// Constructor initializes the parser with a token stream and sets up the interpreter.
	public dslParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	// Context class for the 'dsl' rule — the entry point of the grammar.
	@SuppressWarnings("CheckReturnValue")
	public static class DslContext extends ParserRuleContext {

		// Rule for matching version declaration (e.g., DSL version 1.0;)
		public VersionContext version() {
			return getRuleContext(VersionContext.class, 0);
		}

		// Rule for matching drone model declaration (e.g., DroneType myDrone;)
		public Drone_modelContext drone_model() {
			return getRuleContext(Drone_modelContext.class, 0);
		}

		// Rule for variable declarations: Position, Velocity, Distance
		public List<Variable_declarationContext> variable_declaration() {
			return getRuleContexts(Variable_declarationContext.class);
		}
		public Variable_declarationContext variable_declaration(int i) {
			return getRuleContext(Variable_declarationContext.class, i);
		}

		// Rule for element definitions (e.g., move commands, rotate, lightsOn, etc.)
		public List<Element_definitionContext> element_definition() {
			return getRuleContexts(Element_definitionContext.class);
		}
		public Element_definitionContext element_definition(int i) {
			return getRuleContext(Element_definitionContext.class, i);
		}

		// Rule for scoped blocks (e.g., before, after, group blocks)
		public List<Block_statementContext> block_statement() {
			return getRuleContexts(Block_statementContext.class);
		}
		public Block_statementContext block_statement(int i) {
			return getRuleContext(Block_statementContext.class, i);
		}

		// Rule for single-line statements outside blocks
		public List<Unscoped_statementContext> unscoped_statement() {
			return getRuleContexts(Unscoped_statementContext.class);
		}
		public Unscoped_statementContext unscoped_statement(int i) {
			return getRuleContext(Unscoped_statementContext.class, i);
		}

		// Constructor for the DSL context
		public DslContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		// Returns rule index for internal tracking
		@Override public int getRuleIndex() { return RULE_dsl; }

		// Listener callback for entering the 'dsl' rule
		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof dslListener) ((dslListener)listener).enterDsl(this);
		}

		// Listener callback for exiting the 'dsl' rule
		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof dslListener) ((dslListener)listener).exitDsl(this);
		}

		// Visitor pattern for traversing the parse tree
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if (visitor instanceof dslVisitor) return ((dslVisitor<? extends T>)visitor).visitDsl(this);
			else return visitor.visitChildren(this);
		}
	}

	// Entry point of the grammar — parses a complete DSL file.
	public final DslContext dsl() throws RecognitionException {
		DslContext _localctx = new DslContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_dsl);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
				// Parse DSL version
				setState(42);
				version();

				// Parse drone model declaration
				setState(43);
				drone_model();

				// Parse one or more variable declarations (Position, Velocity, Distance)
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 416L) != 0)) {
					{
						setState(44);
						variable_declaration();
					}
					setState(49);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}

				// Parse element definitions
				setState(53);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
					if (_alt == 1) {
						{
							setState(50);
							element_definition();
						}
					}
					setState(55);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				}

				// Parse scoped blocks (before, after, group)
				setState(59);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
					if (_alt == 1) {
						{
							setState(56);
							block_statement();
						}
					}
					setState(61);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				}

				// Parse unscoped statements (e.g., move, rotate)
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 545275904L) != 0)) {
					{
						setState(62);
						unscoped_statement();
					}
					setState(67);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	// Context for the 'version' rule — matches DSL version declaration (e.g., DSL version 1.0;)
	@SuppressWarnings("CheckReturnValue")
	public static class VersionContext extends ParserRuleContext {
		public TerminalNode VERSION_NUMBER() { return getToken(dslParser.VERSION_NUMBER, 0); }
		public VersionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_version; }

		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).enterVersion(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).exitVersion(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dslVisitor ) return ((dslVisitor<? extends T>)visitor).visitVersion(this);
			else return visitor.visitChildren(this);
		}
	}

	// Parses version declaration: DSL version <number>;
	public final VersionContext version() throws RecognitionException {
		VersionContext _localctx = new VersionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_version);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(T__0);
			setState(69);
			match(T__1);
			setState(70);
			match(VERSION_NUMBER);
			setState(71);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	// Context for the 'drone_model' rule — matches the DroneType declaration.
	@SuppressWarnings("CheckReturnValue")
	public static class Drone_modelContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(dslParser.ID, 0); }
		public Drone_modelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_drone_model; }

		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).enterDrone_model(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).exitDrone_model(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dslVisitor ) return ((dslVisitor<? extends T>)visitor).visitDrone_model(this);
			else return visitor.visitChildren(this);
		}
	}

	// Parses drone model declaration: DroneType <ID>;
	public final Drone_modelContext drone_model() throws RecognitionException {
		Drone_modelContext _localctx = new Drone_modelContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_drone_model);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(T__3);
			setState(74);
			match(ID);
			setState(75);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	// Context for variable declarations: Position, Velocity, or Distance.
	@SuppressWarnings("CheckReturnValue")
	public static class Variable_declarationContext extends ParserRuleContext {

		public Position_declarationContext position_declaration() {
			return getRuleContext(Position_declarationContext.class,0);
		}
		public Velocity_declarationContext velocity_declaration() {
			return getRuleContext(Velocity_declarationContext.class,0);
		}
		public Distance_declarationContext distance_declaration() {
			return getRuleContext(Distance_declarationContext.class,0);
		}

		public Variable_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_declaration; }

		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).enterVariable_declaration(this);
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).exitVariable_declaration(this);
		}

		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dslVisitor ) return ((dslVisitor<? extends T>)visitor).visitVariable_declaration(this);
			else return visitor.visitChildren(this);
		}
	}
	// Method for parsing a variable declaration, which could be a position, velocity, or distance declaration.
	public final Variable_declarationContext variable_declaration() throws RecognitionException {
		// Create a new parsing context for variable declaration.
		Variable_declarationContext _localctx = new Variable_declarationContext(_ctx, getState());
		// Enter the parser rule for variable declaration (rule index 6).
		enterRule(_localctx, 6, RULE_variable_declaration);
		try {
			setState(80);
			// Synchronize error handler to be ready for errors.
			_errHandler.sync(this);
			// Look ahead at the next input token to decide which alternative to take.
			switch (_input.LA(1)) {
			case T__4:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				position_declaration();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				velocity_declaration();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 3);
				{
				setState(79);
				distance_declaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			// Error handling: associate the exception and report & recover from it.
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			// Exit this parser rule.
			exitRule();
		}
		// Return the parsed variable declaration context.
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	// Parser context class for 'position_declaration' rule.
	public static class Position_declarationContext extends ParserRuleContext {
		// Method to get the ID token (variable name).
		public TerminalNode ID() { return getToken(dslParser.ID, 0); }
		// Method to get the vector value associated with the position.
		public VectorContext vector() {
			return getRuleContext(VectorContext.class,0);
		}
		// Constructor passing parent context and state.
		public Position_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_position_declaration; }
		// Methods to notify listeners when entering/exiting this rule.
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).enterPosition_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).exitPosition_declaration(this);
		}
		// Visitor pattern method to accept visitors.
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dslVisitor ) return ((dslVisitor<? extends T>)visitor).visitPosition_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	// Parsing method for position declaration.
	public final Position_declarationContext position_declaration() throws RecognitionException {
		Position_declarationContext _localctx = new Position_declarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_position_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(T__4);
			setState(83);
			match(ID);
			setState(84);
			match(T__5);
			setState(85);
			vector();
			setState(86);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	// Parser context class for 'velocity_declaration' rule.
	public static class Velocity_declarationContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(dslParser.ID, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Velocity_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_velocity_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).enterVelocity_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).exitVelocity_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dslVisitor ) return ((dslVisitor<? extends T>)visitor).visitVelocity_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	// Parsing method for velocity declaration.
	public final Velocity_declarationContext velocity_declaration() throws RecognitionException {
		Velocity_declarationContext _localctx = new Velocity_declarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_velocity_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(T__6);
			setState(89);
			match(ID);
			setState(90);
			match(T__5);
			setState(91);
			expression(0);
			setState(92);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	// Parser context class for 'distance_declaration' rule.
	public static class Distance_declarationContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(dslParser.ID, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Distance_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_distance_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).enterDistance_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).exitDistance_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dslVisitor ) return ((dslVisitor<? extends T>)visitor).visitDistance_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	// Parsing method for distance declaration.
	public final Distance_declarationContext distance_declaration() throws RecognitionException {
		Distance_declarationContext _localctx = new Distance_declarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_distance_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(T__7);
			setState(95);
			match(ID);
			setState(96);
			match(T__5);
			setState(97);
			expression(0);
			setState(98);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	// Parser context class for 'vector' rule, representing a vector with three expressions.
	public static class VectorContext extends ParserRuleContext {
		// Returns all expression contexts inside the vector.
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		// Returns the expression at a specific index (0-based).
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public VectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vector; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).enterVector(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).exitVector(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dslVisitor ) return ((dslVisitor<? extends T>)visitor).visitVector(this);
			else return visitor.visitChildren(this);
		}
	}

	// Parsing method for vector.
	public final VectorContext vector() throws RecognitionException {
		VectorContext _localctx = new VectorContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_vector);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(T__8);
			setState(101);
			expression(0);
			setState(102);
			match(T__9);
			setState(103);
			expression(0);
			setState(104);
			match(T__9);
			setState(105);
			expression(0);
			setState(106);
			match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
// Parser context class for 'element_definition' rule.
	public static class Element_definitionContext extends ParserRuleContext {
		// Methods to get multiple ID tokens.
		public List<TerminalNode> ID() { return getTokens(dslParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(dslParser.ID, i);
		}
		// Get parameter list context.
		public Parameter_listContext parameter_list() {
			return getRuleContext(Parameter_listContext.class,0);
		}
		public Element_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_element_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).enterElement_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).exitElement_definition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dslVisitor ) return ((dslVisitor<? extends T>)visitor).visitElement_definition(this);
			else return visitor.visitChildren(this);
		}
	}

	// Parsing method for element definition.
	public final Element_definitionContext element_definition() throws RecognitionException {
		Element_definitionContext _localctx = new Element_definitionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_element_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(ID);
			setState(109);
			match(ID);
			setState(110);
			match(T__8);
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1610613248L) != 0)) {
				{
				setState(111);
				parameter_list();
				}
			}

			setState(114);
			match(T__10);
			setState(115);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
// Parser context class for 'parameter_list' rule.
	public static class Parameter_listContext extends ParserRuleContext {
		// List of parameter contexts inside the list.
		public List<ParameterContext> parameter() {
			return getRuleContexts(ParameterContext.class);
		}
		// Get a specific parameter context by index.
		public ParameterContext parameter(int i) {
			return getRuleContext(ParameterContext.class,i);
		}
		public Parameter_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).enterParameter_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).exitParameter_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dslVisitor ) return ((dslVisitor<? extends T>)visitor).visitParameter_list(this);
			else return visitor.visitChildren(this);
		}
	}

	// Parsing method for parameter list.
	public final Parameter_listContext parameter_list() throws RecognitionException {
		Parameter_listContext _localctx = new Parameter_listContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_parameter_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			parameter();
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__9) {
				{
				{
				setState(118);
				match(T__9);
				setState(119);
				parameter();
				}
				}
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	// Parser context class for 'parameter' rule.
	public static class ParameterContext extends ParserRuleContext {
		// Parameter name token.
		public TerminalNode ID() { return getToken(dslParser.ID, 0); }
		// Parameter value as vector.
		public VectorContext vector() {
			return getRuleContext(VectorContext.class,0);
		}
		// Parameter value as expression.
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).enterParameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dslListener ) ((dslListener)listener).exitParameter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dslVisitor ) return ((dslVisitor<? extends T>)visitor).visitParameter(this);
			else return visitor.visitChildren(this);
		}
	}
